--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <script src="script.js" defer></script>
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
@@ -27,7 +27,7 @@
               />
             </svg>
           </div>
-          <p class="topline">How did we do?</p>
+          <p class="rate_topline">How did we do?</p>
           <p class="rate_description">
             Please let us know how we did with your support request. All
             feedback is appreciated to help us improve our offering!
@@ -40,7 +40,7 @@
             <div class="rate_number rate_number_5">5</div>
           </div>
           <div class="submit_btn_wrapper">
-            <button class="submit_btn">Submit</button>
+            <button class="submit_btn" type="submit">Submit</button>
           </div>
         </div>
         <div class="card_thanks_container">
@@ -136,9 +136,9 @@
             </svg>
           </div>
           <div class="selected_rate_wrapper">
-            <p class="selected_rate">You selected 4 out of 5</p>
+            <p class="selected_rate">You selected <span></span> out of 5</p>
           </div>
-          <p class="topline">Thank you!</p>
+          <p class="thanks_topline">Thank you!</p>
           <p class="thanks_description">
             We appreciate you taking the time to give a rating. If you ever need
             more support, don’t hesitate to get in touch!
